--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
           <p> <i class="fa fa-map-marker fa-lg"></i> Collins Street West Victoria 8007 Australia</p>
           <p> <i class="fa fa-mobile fa-lg"></i> +880 01711 109 443</p>
           <p> <i class="fa fa-envelope-o "></i> <a href="mailto:malek017111@gmail.com">malek017111@gmail.com</a></p>
-          <p> <i class="fa fa-link "></i> <a href="http://themeelite.com/demos/flato/template-2/www.websitename.com">www.websitename.com</a></p>
+          <p> <i class="fa fa-link "></i> <a href="https://malekbd.github.io/me/">www.malekbd.github.io/me/</a></p>
         </div>
         <!--contact info end-->
         <!--contact form start-->
