--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
       <div class="container">
         <ul>
           <li><a href="http://themeelite.com/demos/flato/template-2/#"><i class="fa fa-twitter fa-2x"></i></a></li>
-          <li><a href="http://themeelite.com/demos/flato/template-2/#"><i class="fa fa-facebook fa-2x"></i></a></li>
+          <li><a href="http://www.facebook.com/mpmlive"><i class="fa fa-facebook fa-2x"></i></a></li>
           <li><a href="http://themeelite.com/demos/flato/template-2/#"><i class="fa fa-linkedin fa-2x"></i></a></li>
           <li><a href="http://themeelite.com/demos/flato/template-2/#"><i class="fa fa-pinterest fa-2x"></i></a></li>
           <li><a href="http://themeelite.com/demos/flato/template-2/#"><i class="fa fa-dribbble fa-2x"></i></a></li>
