--- a/index.html
+++ b/index.html
@@ -312,12 +312,9 @@
     <section class="footer" id="footer">
       <div class="container">
         <ul>
-          <li><a href="http://themeelite.com/demos/flato/template-2/#"><i class="fa fa-twitter fa-2x"></i></a></li>
+          <li><a href="https://twitter.com/malekbogra"><i class="fa fa-twitter fa-2x"></i></a></li>
           <li><a href="http://www.facebook.com/mpmlive"><i class="fa fa-facebook fa-2x"></i></a></li>
           <li><a href="http://themeelite.com/demos/flato/template-2/#"><i class="fa fa-linkedin fa-2x"></i></a></li>
-          <li><a href="http://themeelite.com/demos/flato/template-2/#"><i class="fa fa-pinterest fa-2x"></i></a></li>
-          <li><a href="http://themeelite.com/demos/flato/template-2/#"><i class="fa fa-dribbble fa-2x"></i></a></li>
-          <li><a href="http://themeelite.com/demos/flato/template-2/#"><i class="fa fa-rss fa-2x"></i></a></li>
         </ul>
       </div>
     </section>
