--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
         <ul>
           <li><a href="https://twitter.com/malekbogra"><i class="fa fa-twitter fa-2x"></i></a></li>
           <li><a href="http://www.facebook.com/mpmlive"><i class="fa fa-facebook fa-2x"></i></a></li>
-          <li><a href="http://themeelite.com/demos/flato/template-2/#"><i class="fa fa-linkedin fa-2x"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/mpmlive/"><i class="fa fa-linkedin fa-2x"></i></a></li>
         </ul>
       </div>
     </section>
