--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         <!--contact info start-->
         <div class="col-xs-12 col-sm-3 col-md-4 col-lg-4">
           <h4>Contact details</h4>
-          <p> <i class="fa fa-map-marker fa-lg"></i> 523, West Kazipara, Mirpur -10, Dhaka-1216, Mirpur TSO, Mirpur, Dhaka 1216</p>
+          <p> <i class="fa fa-map-marker fa-lg"></i> 523, West Kazipara, Mirpur -10, Dhaka-1216</p>
           <p> <i class="fa fa-mobile fa-lg"></i> +880 01711 109 443</p>
           <p> <i class="fa fa-envelope-o "></i> <a href="mailto:malek017111@gmail.com">malek017111@gmail.com</a></p>
           <p> <i class="fa fa-link "></i> <a href="https://malekbd.github.io/me/">www.malekbd.github.io/me/</a></p>
