--- a/index.html
+++ b/index.html
@@ -228,11 +228,9 @@
           <div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
             <div class="arrowpart"></div>
             <div class="exCon">
-              <h4>Master Degree of Design</h4>
-              <h5>University of Design</h5>
-              <p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quom placerat facer
-                possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui faorum claritatem.
-                Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius.</p>
+              <h4>Bachelor Degree of Design</h4>
+              <h5>National University, Bangladesh</h5>
+              <p>Completed 3 Years Bachelor degree from Arts under National University, Bangladesh</p>
             </div>
           </div>
         </div>
