--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
           <div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
             <div class="arrowpart"></div>
             <div class="exCon">
-              <h4>Bachelor Degree of Design</h4>
+              <h4>Bachelor Degree </h4>
               <h5>National University, Bangladesh</h5>
               <p>Completed 3 Years Bachelor degree from Arts under National University, Bangladesh</p>
             </div>
