--- a/index.html
+++ b/index.html
@@ -236,31 +236,27 @@
         </div>
         <div class="row workDetails">
           <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
-            <div class="workYear">Sept, 2007</div>
+            <div class="workYear">Sept, 2017</div>
           </div>
           <div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
             <div class="arrowpart"></div>
             <div class="exCon">
-              <h4>Bachelor of Arts</h4>
-              <h5>University of Design</h5>
-              <p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quom placerat facer
-                possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui faorum claritatem.
-                Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius.</p>
+              <h4>CCNA R&S   </h4>
+              <h5>Cisco Certified Network Associate (CCNA) from CSL</h5>
+              <p>Completed  CCNA RnS (200-125) Course. Now studying CCNP RnS</p>
             </div>
           </div>
         </div>
         <div class="row workDetails">
           <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
-            <div class="workYear">Feb, 2005</div>
+            <div class="workYear">Feb, 2017</div>
           </div>
           <div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
             <div class="arrowpart"></div>
             <div class="exCon">
-              <h4>Master Degree of Design</h4>
-              <h5>University of Design</h5>
-              <p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quom placerat facer
-                possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui faorum claritatem.
-                Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius.</p>
+              <h4>MTCNA & MTCRE</h4>
+              <h5>CSL</h5>
+              <p>Completed MTCNA & MTCRE Course from CSL</p>
             </div>
           </div>
         </div>
