--- a/index.html
+++ b/index.html
@@ -204,9 +204,7 @@
               <h4>Senior Network Engineer </h4>
               <h5>Alpha Broadway System </h5>
               <p>1. Maintain IP Core router and manage total Bandwidth.
-                2. Maintain linux based server like DNS server, Web server, Mail server, FTP server.
-                3. Implement new technology as well as devices for improvement.
-                4. Maintain and monitor over all network and services. 
+                2. Maintain linux based server like DNS server, Web server, FTP server.
                 </p>
             </div>
           </div>
