--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <h3>Abdul Malek</h3>
             <h4 class="subHeading">System &amp; Network Engineer</h4>
             <p>Intend to work in a challenging and competitive environment where strong sense of responsibilities and commitment is required, where dignity of work provides job satisfaction and the place of work provides avenues for learning, achieving top level.  </p>
-            <p>To apply my more than eight years of network architecture and engineering experience toward designing networks that will improve operational profeciency and reduce total costs of ownership. </p>
+            <p>To apply more than eight years of network architecture and engineering experience toward designing networks that will improve operational profeciency and reduce total costs of ownership. </p>
           </div>
           <div class=" col-xs-12 col-sm-12 col-md-4 col-lg-4 col-md-offset-1 col-lg-offset-1 proPic"> <img src="images/Malek.jpg"
               alt="" class="img-circle topmar"> </div>
