--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <div class="arrowpart"></div>
             <div class="exCon">
               <h4>System Engineer </h4>
-              <h5>Stargate Communications </h5>
+              <h5>Stargate Communications (Nation-wide ISP) </h5>
               <p>Client call receives Take follow up and other problem according to instruction. MikroTik, BDCOM switches BDCOM OLT, Cisco Switches, and Cisco Router management. POP up & down problem inquiry from Interface & MRTG graph & take necessary steps to solve it. OTDR Measurement, Power Measurement. Monitoring the Network & Report the daily ac-tivities of work to the authority.
                 </p>
             </div>
@@ -184,7 +184,7 @@
             <div class="arrowpart"></div>
             <div class="exCon">
               <h4>System Admininstrator </h4>
-              <h5>Karsan Net </h5>
+              <h5>Karsan Net (CAT A Licensed ISP) </h5>
               <p>1. Maintain IP Core router and manage total Bandwidth.
                 2. Maintain linux based server like DNS server, Web server, Mail server, FTP server.
                 3. Implement new technology as well as devices for improvement.
@@ -202,7 +202,7 @@
             <div class="arrowpart"></div>
             <div class="exCon">
               <h4>Senior Network Engineer </h4>
-              <h5>Alpha Broadway System </h5>
+              <h5>Alpha Broadway System (Central-Zone Licensed ISP )</h5>
               <p>1. Maintain IP Core router and manage total Bandwidth.
                 2. Maintain linux based server like DNS server, Web server, FTP server.
                 </p>
