--- a/index.html
+++ b/index.html
@@ -196,12 +196,28 @@
         <div class="row workDetails">
           <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
             <div class="workYear">August 15, 2018 <br>
-              Present</div>
+              20 September, 2019</div>
           </div>
           <div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
             <div class="arrowpart"></div>
             <div class="exCon">
               <h4>Senior Network Engineer </h4>
+              <h5>Alpha Broadway System (Central-Zone Licensed ISP )</h5>
+              <p>1. Maintain IP Core router and manage total Bandwidth.
+                2. Maintain linux based server like DNS server, Web server, FTP server.
+                </p>
+            </div>
+          </div>
+        </div>
+        <div class="row workDetails">
+          <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
+            <div class="workYear">21 September, 2019 <br>
+              Present</div>
+          </div>
+          <div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
+            <div class="arrowpart"></div>
+            <div class="exCon">
+              <h4>Assistant System Adminstrator </h4>
               <h5>Alpha Broadway System (Central-Zone Licensed ISP )</h5>
               <p>1. Maintain IP Core router and manage total Bandwidth.
                 2. Maintain linux based server like DNS server, Web server, FTP server.
